# cpp-unicodelib

./: .gitignore  CMakeLists.txt  README.md  unicodelib.h  unicodelib_encodings.h  unicodelib_names.h  unicodenames.h
.github/workflows/: cmake.yml
modules/: CMakeLists.txt  unicodelib.cppm  unicodelib.names.cppm
scripts/: gen_block_values.py  gen_blocks.py  gen_general_category_entries.py  gen_general_category_properties.py  gen_grapheme_break_properties.py  gen_grapheme_cluster_break_properties.py  gen_normalization_composition.py  gen_normalization_properties.py  gen_property_values.py  gen_script_extension_ids.py  gen_script_extension_properties_for_id.py  gen_scripts.py  gen_tables.py  gen_unicode_data_entries.py  gen_unicode_names.py  update.py  update.sh
src/: _case_foldings.cpp  _normalization_composition.cpp  _script_extension_properties_for_id.cpp  _simple_case_mappings.cpp  _special_case_mappings.cpp  _special_case_mappings_default.cpp  data_block_properties.cpp  data_case_foldings.cpp  data_derived_core_properties.cpp  data_emoji_properties.cpp  data_general_category_properties.cpp  data_grapheme_break_properties.cpp  data_normalization_composition.cpp  data_normalization_properties.cpp  data_properties.cpp  data_script_extension_ids.cpp  data_script_extension_properties_for_id.cpp  data_script_properties.cpp  data_sentence_break_properties.cpp  data_simple_case_mappings.cpp  data_special_case_mappings.cpp  data_special_case_mappings_default.cpp  data_word_break_properties.cpp  unicodelib.cc  unicodelib.cpp  unicodelib_data.cpp  unicodelib_data.h
test/: CMakeLists.txt  test.cc  test.cpp  test2.cpp
